--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+/* Override antd labels */
+
+.ant-form-item-label {
+  padding: 0 !important;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ant-picker-dropdown,
+.ant-select-dropdown,
+.ant-form-item-label > label {
+  font-size: 12px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+
+  letter-spacing: normal;
+  color: #d5d5dc;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.ant-dropdown-menu,
+.ant-select-dropdown,
+.ant-picker-dropdown {
+  border-radius: 10px !important;
+  overflow: hidden;
+  border: solid 1px #e2e2ea;
+  z-index: 1300;
+  min-width: 200px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Override antd checkbox */
+.ant-checkbox-wrapper:hover .ant-checkbox-inner,
+.ant-checkbox:hover .ant-checkbox-inner,
+.ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color: #3dd598;
+}
+
+.ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #3dd598;
+  border-color: #3dd598;
+}
+
+.ant-checkbox-wrapper span {
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.1px;
+  color: #696974;
+  vertical-align: -webkit-baseline-middle;
+}
+
+.ant-pagination-options .ant-select-selection-item {
+  background-color: transparent !important;
+}
+
+/* App sider */
+
+#sider {
+  height: calc(100vh - 70px);
+  position: fixed;
+  box-shadow: inset -1px 0 0 0 #e2e2ea;
+  background-color: #ffffff;
+  margin-top: 70px;
+  z-index: 1000;
+}
+
+#sider .ant-layout-sider-children {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  padding: 30px 0 90px 0;
+  overflow: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+#sider .ant-layout-sider-children:hover {
+  overflow-y: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/** App header */
+
+#header {
+  padding: 0;
+  height: 70px !important;
+  box-shadow: inset 0 -1px 0 0 #e2e2ea;
+  background-color: #ffffff;
+  position: fixed;
+  width: 100%;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+}
+
+/** and popover */
+
+.ant-tooltip-inner {
+  width: 183px;
+  padding: 8px 14px;
+  box-shadow: 0 -15px 5px 0 rgba(68, 68, 79, 0.1);
+  background-color: #171725;
+  border-radius: 10px;
+
+  font-size: 12px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.09px;
+  color: #fafafb;
 }
